--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-react-redux-boilerplate",
   "version": "1.0.0",
   "private": true,
-  "description": "A frontend boilerplate with React, Redux and Typescript",
+  "description": "History",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -52,7 +52,6 @@
     "style-loader": "^0.20.2",
     "ts-loader": "^4.0.0",
     "typescript": "^2.7.2",
-    "url-loader": "^1.0.0-beta.0",
     "webpack": "^4.0.1",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^2.0.10",
@@ -60,7 +59,8 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "react": "^16.2.0",
+    "eslint": "^4.19.1",
+    "react": "^16.4.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
